CSS fix for page hero: top spacing

--- a/src/app/page-v2/component/tract-page/tract-page.component.css
+++ b/src/app/page-v2/component/tract-page/tract-page.component.css
@@ -270,3 +270,7 @@ div.cardContent:not(.hasHading) {
 app-page-hero > app-content-paragraph:first-child > app-content-image:first-child {
   margin-top: -48px;
 }
+
+div#toolContent > app-page-hero:first-child {
+  padding-top: 0px !important;
+}
